feat(command): Implement Command GET /device/name/{name} V2 API (#3061)
Per https://app.swaggerhub.com/apis-docs/EdgeXFoundry1/core-command/2.x#/default/get_device_name__name_, implement Command GET /device/name/{name} V2 API


feat(v2 command): adjust codes per review comments

1. Move container DIC codes to go-mod-bootstrap for reuse
2. Create mocks under go-mod-core-contracts with V2 Client libraries
3. update to use go-mod-core-contracts v2.0.0-dev.10 to use container
DIC and V2 Client libraries mocks
